# ai-agents

./: pyproject.toml
1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  app.py
1_foundations/community_contributions/: 1_lab1_Mudassar.ipynb  1_lab1_Thanh.ipynb  1_lab1_gemini.ipynb  1_lab1_groq_llama.ipynb  1_lab1_open_router.ipynb  1_lab2_Kaushik_Parallelization.ipynb  2_lab2_exercise.ipynb  2_lab2_six-thinking-hats-simulator.ipynb  3_lab3_groq_llama_generator_gemini_evaluator.ipynb  Business_Idea.ipynb  lab2_updates_cross_ref_models.ipynb  llm-evaluator.ipynb  travel_planner_multicall_and_sythesizer.ipynb
1_foundations/me/: summary.txt
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
3_crew/lee_mccormick/engineering_team_exercise/: README.md  pyproject.toml
3_crew/lee_mccormick/engineering_team_exercise/knowledge/: project_info.txt
3_crew/lee_mccormick/engineering_team_exercise/output/: app.py  features.json  technical_design.md
3_crew/lee_mccormick/engineering_team_exercise/output/billing_and_receipts/: billing_and_receipts.py  test_billing_and_receipts.py
3_crew/lee_mccormick/engineering_team_exercise/output/inventory_tracking/: inventory_tracking.py  test_inventory_tracking.py
3_crew/lee_mccormick/engineering_team_exercise/output/order_management/: order_management.py  test_order_management.py
3_crew/lee_mccormick/engineering_team_exercise/src/engineering_team_exercise/: crew.py  main.py
3_crew/lee_mccormick/engineering_team_exercise/src/engineering_team_exercise/config/: agents.yaml  tasks.yaml
(+45 files in other folders)
