[project]
name = "engineering_team_exercise"
version = "0.1.0"
description = "engineering_team_exercise using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
    "gradio>=5.34.0",
]

[project.scripts]
engineering_team_exercise = "engineering_team_exercise.main:run"
run_crew = "engineering_team_exercise.main:run"
train = "engineering_team_exercise.main:train"
replay = "engineering_team_exercise.main:replay"
test = "engineering_team_exercise.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
